adjusted content on ion drives
Former-commit-id: db1cc5891027eccfff6105d9e4a584fcb9941ce0 [formerly 1525d534cab6d12245449c4b6e639cb2cb95850f]
Former-commit-id: 84e0b5057314d9cd9d2463112b37e09ce0f08642

--- a/_includes/machinesTransport.html
+++ b/_includes/machinesTransport.html
@@ -33,5 +33,6 @@
 	</section>
 </div>
 {% include transportNuclearShuttles.html%}
-{% include transportIondrive.html%}
+{% include transportFutureEngines.html%}
+{% include transportCargoShip.html %}
 {% include transportTethers.html%}
