--- a/_includes/transportIondrive.html
+++ b/_includes/transportIondrive.html
@@ -2,14 +2,14 @@
 					<section>
 						<div class="outerDiv">
 							<div class="innerDiv">
-								<h3>Ion Drive Cargo Ships</h3>
+								<h3>Potential Future Engine Options</h3>
 								<p>
 								Ion egines have now been used to take probes to several asteroids.
 								NASA's NEXT ion thruster is rated as having an exhaust velocity of
 								nearly 40 000 m/s (I<sub>sp</sub> of 4190 s). They burn their fuel
 								only a very little at a time, so they are slow to accelerate
-								a ship enough to get it somewhere. In this case,
-								that makes them good for getting a cargo ship from low Earth orbit to
+								a ship enough to get it somewhere.
+								That could make them good for getting a cargo ship from low Earth orbit to
 								lunar orbit. The mass saved because less fuel is needed means a
 								much bigger payload can be delivered. Not as much as the difference
 								in I<sub>sp</sub> suggests -
@@ -21,12 +21,15 @@
 								so the cargo ship could make the run a bunch of times before it
 								needed maintenance.
 							</p>
+       <p>
+        However, it would take about 2 years for the cargo ship to complete a run, and that could be a damaging bottleneck for the overall project. The early missions are primarily to test prototype robots. Once that test data is in the next iteration of robots would be ready in much less than the year it takes for the cargo ship to return, and then the engineering teams would have to wait a further year for the new versions to be tested, and again a year to send the following versions. Since there will be at least one crewed mission in support of that testing, which couldn't possibly use an ion-drive ship to get to the Moon, there will also necessarily be at least one large mission using conventional hydrolox (burning hydrogen and oxygen) upper stage engines. So, the cargo ship might as well have next-generation hydrolox engines. After the first tether orbiting the Moon is complete, there would be no further role for an ion-drive ship on the Earth-Moon run, either. A cargo ship with hydrolox engines will need maintenance in orbit earlier, but a space station in support of these missions is needed anyways, so that is no issue.
+       </p>
 							<p>
-								If Neumann drives are successfully developed, that
-								would be even better. They look promising if there are no
-								issues that show up during on-orbit testing of a working model.
+        For launching from the Moon to deep space destinations like Mars or Venus, low-thrust ion drives could be a good choice. Neumann drives would be even better if
+								they are successfully developed. They look promising as long as no
+								issues show up during on-orbit testing of a working model.
 								They might be available
-								in a decade or less. Other dark horses include
+								in a decade or less. They could be fueled with magnesium sourced from the Moon, or aluminum collected from scrapped satellites and spent upper stages, or even carbon from the waste produced by a human crew. Other dark horses include
 								Em drives, and Mach drives, but those need a lot more development
 								even to be sure they are genuinely viable, and after that a
 								lot more development to be working drives.
