--- a/_includes/transportNuclearShuttles.html
+++ b/_includes/transportNuclearShuttles.html
@@ -26,7 +26,7 @@
 					of 4400 m/s in space, so a nuclear engine could speed up or slow
 					down a ship by twice as much as the best high-thrust engines we have.
 					The virtual colonies use them as shuttles from the lunar surface
-					to lunar orbit.
+					to lunar orbit. That involves about 5 km/s of delta V. Cargo ships coming to lunar orbit can have larger payloads by handing off their cargo to the shuttle and staying in orbit. 
 				</p>
 			</div>
 		</div>
