--- a/_includes/transportTethers.html
+++ b/_includes/transportTethers.html
@@ -9,7 +9,7 @@
 					orbit from a large anchor mass, the same as space elevators do. They
 					just aren't attached to its surface. The platform at the bottom of
 					their cable	(the foot) instead
-					moves above the surface as some suitable low altitude. Ships launched
+					moves above the surface at some suitably low altitude. Ships launched
 					from the surface need to catch up to the foot, and to brake to return to
 					the surface. The advantage is the delta v required is much less than
 					what is needed to get to orbit. For the first tether planned for
@@ -105,20 +105,13 @@
 					tether complex loses when something leaves is balanced by the
 					momentum gained when something arrives. In practice, though, a bunch
 					of engines on the anchor masses are needed to keep
-					orbits nice and circular and in the right spot. An
-					array of clustered ion drives would be enough to achieve this,
+					orbits nice and circular and in the right spot. A few small engines would be enough to achieve this,
 					since the asteroid anchor is many times heavier than any ship, and
 					the center of gravity of the whole tether can be moved at will by
 					reeling the spaceward and moonward tethers in and out. Making the
 					platforms at the tip and foot of the tether complex good and
 					massive helps with this, and also reduces oscillations by
 					increasing the tension on the cables.
-				</p>
-				<p>
-					This is an area where it would be really nice to have those
-					Neumann drives. When using magnesium fuel, they get three times the
-					I<sub>sp</sub> of the best working ion drives, and the fuel could
-					come from the Moon.
 				</p>
 			</div>
 		</div>
