--- a/_includes/PearyColony.html
+++ b/_includes/PearyColony.html
@@ -17,8 +17,7 @@
 					</p>
 					<p>
 						That small community noted that right beside those reserves of
-						volatiles (being substances that are normally too volatile in the
-						lunar environment to stick around), there are peaks on the crater
+						volatiles (being substances that normally evaporate away into space on the Moon), there are peaks on the crater
 						rims that receive sunlight over 90% of the time. If you can raise
 						solar panels on masts 30 m or so, in the right spots they would get
 						sunlight virtually all the time. So you have solved energy and water,
@@ -26,22 +25,15 @@
 						<br><br>
 						Thus most pushes for lunar bases these days focus on the poles. There
 						is even a business model - turn the water into liquid hydrogen and
-						liquid oxygen, and sell it as feul for satellites, deep space missions,
+						liquid oxygen, and sell it as fuel for raising satellites, deep space missions,
 						and space stations. Unlike putting a base on Mars, this is a space
 						program we could undertake quickly, it is much safer, and it has
 						practical payoffs here at home - space refeuling would allow much
 						more space exploration.
 						<br><br>
-						It has been repeatedly debated whether the base at Peary
-						Crater should be the first priority, or the first missions should go
-						to Lalande and expand to Peary from there. There are several reasons
-						to doubt hydro-lox fuel production would be a
-						good business in this paradigm. An orbital tether system,
-						ion drive cargo ships, and nuclear shuttles are all part of this plan,
-						which hugely cuts down the importance of local hydrolox.
-						The water needs of Lalande in the early days could be provided from
-						Earth. The choice of nuclear power plants negates the need
-						for constant sun.
+						It has been repeatedly debated whether in this project the base at Peary
+						Crater should come first, or the first missions should go
+						to Lalande and expand to Peary from there. The use of nuclear ships reduces the advantage of water at hand for fuel, and the early deployment of tethers reduces it even more. The choice of nuclear generators makes solar power unnecessary. The main business models all focus on early establishment of construction ability, and the construction technique did not seem viable at the poles.
 					</p>
 					<p>
 						On further investigation, a version of the construction technique
@@ -68,16 +60,16 @@
 						carbon dioxide, and ammonia. At first the water that is obtained is
 						only to supplement the fuel supply of the nuclear shuttles. Then it
 						supplies their fuel entirely, and then the new colony has more and
-						more freedom to use water for greenhouses.
+						more freedom to use water for greenhouses. If there is a good market in cislunar space for water as rocket fuel or whatever else, all the better, but there is no particular need for that in this paradigm.
 					</p>
 					<p>
 						Finally, Peary starts
 						shipping water, carbon, and ammonia to Lalande in ever larger
 						amounts. That water stays on the Moon, to make ponds, then swimming
-						pools, then small lakes. Maybe some would ship to orbit for fuel,
+						pools, then small lakes. Maybe some would continue to ship to orbit for fuel,
 						or radiation shielding. But
 						there might be no need. By this time asteroids will be mined for
-						water and metals and may be a better source for needs in open space.
+						water and metals too. They may be a better source for needs in open space.
 					</p>
 				</div>
 			</article>
