--- a/_includes/machinesBuilding.html
+++ b/_includes/machinesBuilding.html
@@ -118,7 +118,7 @@
 		more frequent and dramatic with time. Right now they are at a pretty early
 		stage.
 	</div>
-<div class="framePairTop">
+<div class="framePairTop" id="BasaltFiberStation">
 	<div class="framewrap frame16x9">
 					<iframe src="modelProxy17.html" frameborder="0" allowfullscreen
 					mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
@@ -128,7 +128,7 @@
 <div class="framePairBottom">
   The production of basalt fiber is critical technology for large construction. Cable can perhaps be imported for the first hab, after that this has to be made to work.
 </div>
-<div class="framePairTop">
+<div class="framePairTop" id="MIPstation">
 	<div class="framewrap frame16x9">
 					<iframe src="modelProxy18.html" frameborder="0" allowfullscreen
 					mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
@@ -138,7 +138,7 @@
 <div class="framePairBottom">
  The Melt-In-Place stations need to be the backbone of early construction.	They can produce a wide range of useful items, a very wide range if the	rovers are agile enough to assist. They can produce materials in bulk, so if	the materials have some weaknesses, you can simply use more to compensate.
 </div>
-<div class="framePairTop">
+<div class="framePairTop" id="HangarsOverview">
 	<div class="framewrap frame16x9">
 					<iframe src="modelProxy20.html" frameborder="0" allowfullscreen
 					mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
