--- a/_includes/transportTethers.html
+++ b/_includes/transportTethers.html
@@ -1,4 +1,4 @@
-				<div class="container">
+				<div class="container" id="TetherTransport">
 					<section>
 						<div class="outerDiv">
 							<div class="innerDiv">
@@ -206,11 +206,23 @@
      There is lots of room to play with this idea. Down the road the anchor mass could be moved into a higher orbit, lowering the speed needed to reach its foot even further. If it orbits at 20,000 km the speed of its foot is 3.4 km/s relative to Earth's surface. If the spaceward tether extends another 10,000 km a vessel released from there would receive a speed boost of 2.6 km/s for interplanetary travel. The best balance of where to place the anchor mass would have to do with the power and time needed to travel along the cables, the maintenance needs of the complex, and the economics of using rocket engines rather than relying on tethers.
     </p>
     <p>
-     One thing that could be an important consideration is the ease of dropping payloads from the tether foot that then descend to the surface pretty passively. Every km/s shaved off the entry speed of a vessel reduces the demands on a heat shield a lot. At some velocity, it becomes viable to design drop vessels that use aerodynamic lift to reduce speed and maneuver. With rocket fuel sourced from space, it could become cheap to have rockets that leave the foot, accelerate retrograde down to a few hundred meters a second relative to Earth's surface, drop their load, and accelerate back to the tether foot again. That is about 7 km/s of delta V, but the rocket would be a lot lighter on the way back, which saves on fuel. And fuel from space could become cheap. Then you would need drop vessels that can reduce their speed and direct themselves enough to deploy parachutes and land safely in a reasonably well defined area, probably at sea.
+     One thing that could be an important consideration is the ease of dropping payloads from the tether foot that then descend to the surface pretty passively. Every km/s shaved off the entry speed of a vessel reduces the demands on a heat shield a lot. At some velocity, it becomes viable to design drop vessels that use aerodynamic lift to reduce speed and maneuver. With rocket fuel sourced from space, it could become cheap to have rockets that leave the foot, accelerate retrograde down to a few hundred meters a second relative to Earth's surface, drop their load, and accelerate back to the tether foot again. That is about 7 km/s of delta V, but the rocket would be a lot lighter on the way back, which saves on fuel. And fuel from space could become cheap. Then you would need drop vessels that can reduce their speed and direct themselves enough to deploy parachutes and land safely in a reasonably well defined area, probably at sea. That could be worth it, if each one is carrying a ton of platinum.
     </p>
     <p>
-     That could be worth it, if each one is carrying a ton of platinum.
+     Advantages such a structure has over a space elevator:
     </p>
+    <ul>
+     <li>The climb to the anchor is less than a third of the distance to an anchor in geosynchronous orbit. As cars on the cable can only go so fast, the time savings in the trip is helpful. Beaming the power the car needs for the climb from the anchor is also viable over a larger fraction of its journey, allowing the onboard nuclear reactor to be smaller and safer.
+     </li>
+     <li>The cross-section of the cable is much less than that of a space elevator because the loads it must bear are much lower. Not only only could several such tethers be made with the amount of material needed for one space elevator, if there is a grave accident and the cable is cut, the risk it represents is far less. Cable designs are usually based on ribbons with an open weave. By the time and object with that shape and mass had passed through Earth's atmosphere, it may either have mostly disintegrated, or have slowed to a minimal speed and drift to a soft landing.
+     </li>
+     <li>The security needed to protect an installation that starts 250 km above the Earth is much less than what is needed to protect something that reaches the ground.
+     </li>
+     <li>The launch boost the tether can provide is more, over a shorter distance, than a space elevator can provide, because it is deeper in Earth's gravitational well.
+     </li>
+     <li>Because satellites can be shifted over time to orbits that don't interfere with the tether, the demands of avoidance collision will eventually be minimal. A space elevator would always cut through all orbital elevations below geosynchronous.
+     </li>
+    </ul>
 			</div>
 		</div>
 	</section>
