made the learn page modular
Former-commit-id: dcb7c27f88958d2641723020c2becb675b756df0 [formerly 90e84928024e5362758cf8b8ddfb15e0b7af10ff]
Former-commit-id: 33c5db1592e4440d2e6fc5daa2706c22966c720c

--- a/sass/_blocks-objects.learn.sass
+++ b/sass/_blocks-objects.learn.sass
@@ -1,4 +1,6 @@
 /*Block level elements, and non-text objects
+/*hoh asks: is this file intentionally commented out?*/
+/*
 
 .container
   width: 94%
