--- a/_layouts/learnpage.html
+++ b/_layouts/learnpage.html
@@ -25,6 +25,7 @@ MathJax.Hub.Config({
 		</script>
 		<script async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 		<script src="js/space.js"></script>
+		<script src="js/rocketEquation.js"></script>
 	</head>
 <body>
 {%include obsolete-warning.html %}
