--- a/sass/_blocks-objects.learn.sass
+++ b/sass/_blocks-objects.learn.sass
@@ -35,7 +35,8 @@ aside
   +RadiusIn
   +display(flex)
   +flex-flow(column nowrap)
-  +align-items(flex-end)
+  +align-items(flex-endcenter)
+  +justify-content(center)
   margin: 15px
   p
     width: calc(100% - 3rem)
