--- a/sass/_blocks-objects.learn.sass
+++ b/sass/_blocks-objects.learn.sass
@@ -1,6 +1,4 @@
 /*Block level elements, and non-text objects
-/*hoh asks: is this file intentionally commented out?*/
-/*
 
 .container
   width: 94%
@@ -35,8 +33,7 @@ aside
   +RadiusIn
   +display(flex)
   +flex-flow(column nowrap)
-  +align-items(flex-endcenter)
-  +justify-content(center)
+  +align-items(flex-end)
   margin: 15px
   p
     width: calc(100% - 3rem)
