--- a/sass/_blocks-objects.learn.sass
+++ b/sass/_blocks-objects.learn.sass
@@ -35,12 +35,14 @@ aside
   +RadiusIn
   +display(flex)
   +flex-flow(column nowrap)
-  +align-items(flex-endcenter)
+  +align-items(flex-end)
   +justify-content(center)
   margin: 15px
+  p, img
+    +align-self(center)
   p
     width: calc(100% - 3rem)
-    +align-self(center)
+
 
 
 .pixWrap
