--- a/sass/_siglearn.sass
+++ b/sass/_siglearn.sass
@@ -2,6 +2,13 @@
 	padding-bottom: 5px
 	margin-bottom: 0
 
+.diagram
+	background-color: #D0D0D099
+	-webkit-border-radius: 5px
+	-moz-border-radius: 5px
+	border-radius: 5px
+	margin: 2px
+
 #applet_container2
 	width: 500px
 	height: 500px
