less scary makefile
Former-commit-id: e29c30f3415b1a2c3ce5baab30af0e1afbdff100

--- a/_includes/lunarElevator.html
+++ b/_includes/lunarElevator.html
@@ -6,7 +6,7 @@
 		<span>use lunar surface<input type="checkbox" id="surface"></span>
 		<p>End distance:</p>
 		<input type="text" placeholder="(km)" value="" id="end">
-		<span>use EML1<input type="checkbox" id="eml1"></span>
+		<span>use <abbr title="Earth-Moon lagrange point 1">EML1</abbr><input type="checkbox" id="eml1"></span>
 		<p>Material strength:</p>
 		<input type="text" placeholder="(Yuri)" value="" id="material">
 		<span>use Zylon<input type="checkbox" id="zylon"></span>
