--- a/sass/_blocks-objects.sass
+++ b/sass/_blocks-objects.sass
@@ -42,13 +42,13 @@ aside
   +RadiusIn
   +display(flex)
   +flex-flow(column nowrap)
-  +align-items(flex-end)
+  +align-items(center)
   background-color: $innerBkgd
   margin: 15px
   p
     padding: 0.5rem 1.2rem
     margin: 0
-    +align-self(center)
+    +align-self(flex-start)
 
 .pixWrap
   +display(flex)
