--- a/_includes/spaceJStable.html
+++ b/_includes/spaceJStable.html
@@ -1,6 +1,6 @@
 		<div class="innerDiv">
 			<p>[Experimental!] A list of data. Here are some numbers we have found useful during the development of the project.</p>
-			<p>The data is also available from the open source "space.js" script, found at <a href="http://moonwards.com/js/space.js">moonwards.com/js/space.js</a></p>
+			<p>The data is also available in json format, found at <a href="http://moonwards.com/json/">moonwards.com/json/</a></p>
 			<details class="details">
 				<summary>List of numbers</summary>
 				<details><summary>The Moon</summary>
@@ -8,22 +8,18 @@
 						<tr>
 							<th>Property</th>
 							<th>Value</th>
-							<th>Space.js access</th>
 						</tr>
 						<tr>
 							<td>Mass:</td>
 							<td>7.342 10<sup>22</sup> kg</td>
-							<td class="code">space.moon.mass</td>
 						</tr>
 						<tr>
 							<td>Radius:</td>
 							<td>1.7371 10<sup>6</sup> m</td>
-							<td class="code">space.moon.radius</td>
 						</tr>
 						<tr>
 							<td>Gravitational prameter:</td>
 							<td>4.9048695 10<sup>12</sup> kg<sup>-1</sup> m<sup>3</sup> s<sup>2</sup></td>
-							<td class="code">space.moon.gm</td>
 						</tr>
 					</table>
 					<details class="orbit"><summary>Orbit:</summary>
@@ -31,22 +27,18 @@
 							<tr>
 								<th>Property</th>
 								<th>Value</th>
-								<th>Space.js access</th>
 							</tr>
 							<tr>
 								<td>Parent:</td>
 								<td>Earth</td>
-								<td class="code">space.moon.orbit.parent</td>
 							</tr>
 							<tr>
 								<td>Semi-major axis:</td>
 								<td>3.84399 10<sup>8</sup> m</td>
-								<td class="code">space.moon.orbit.radius</td>
 							</tr>
 							<tr>
 								<td>Period:</td>
 								<td>2.360591 10<sup>6</sup> s</td>
-								<td class="code">space.moon.orbit.period</td>
 							</tr>
 						</table>
 					</details>
@@ -56,22 +48,18 @@
 						<tr>
 							<th>Property</th>
 							<th>Value</th>
-							<th>Space.js access</th>
 						</tr>
 						<tr>
 							<td>Mass:</td>
 							<td>7.342 10<sup>22</sup> kg</td>
-							<td class="code">space.earth.mass</td>
 						</tr>
 						<tr>
 							<td>Radius:</td>
 							<td>6.371 10<sup>6</sup> m</td>
-							<td class="code">space.earth.radius</td>
 						</tr>
 						<tr>
 							<td>Gravitational prameter:</td>
 							<td>3.986004418 10<sup>14</sup> kg<sup>-1</sup> m<sup>3</sup> s<sup>2</sup></td>
-							<td class="code">space.earth.gm</td>
 						</tr>
 					</table>
 					<details class="orbit"><summary>Orbit:</summary>
@@ -79,22 +67,18 @@
 							<tr>
 								<th>Property</th>
 								<th>Value</th>
-								<th>Space.js access</th>
 							</tr>
 							<tr>
 								<td>Parent:</td>
 								<td>Sun</td>
-								<td class="code">space.earth.orbit.parent</td>
 							</tr>
 							<tr>
 								<td>Semi-major axis:</td>
 								<td>1.49598023 10<sup>11</sup> m</td>
-								<td class="code">space.earth.orbit.radius</td>
 							</tr>
 							<tr>
 								<td>Period:</td>
 								<td>3.155815 10<sup>7</sup> s</td>
-								<td class="code">space.earth.orbit.period</td>
 							</tr>
 						</table>
 					</details>
