--- a/sass/_blocks-objects.learn.sass
+++ b/sass/_blocks-objects.learn.sass
@@ -1,6 +1,4 @@
-/*Block level elements, and non-text objects
-/*hoh asks: is this file intentionally commented out?*/
-/*
+/*Block level elements, and non-text objects*/
 
 .container
   width: 94%
