converting that json file
Former-commit-id: 4f4cd9926b7846f3c369fe6b0726d81947234172 [formerly ae78e815a7d855ab85b4cf506318185b79f398c2]
Former-commit-id: c30289c9c553d3bd3c8a5ed1994a5ab686bb745c

--- a/_includes/spaceJStableGenerated.html
+++ b/_includes/spaceJStableGenerated.html
@@ -4,8 +4,7 @@ layout: null
 <div class="innerDiv">
 	<p>[Experimental!] A list of data. Here are some numbers we have found useful during the development of the project.</p>
 	<p>The data is also available in json format, found at <a href="http://moonwards.com/json/">moonwards.com/json/</a></p>
-	<details class="details">
-		<summary>List of numbers</summary>
+		<h3>List of numbers</h3>
 {% for planet in site.data.planets %}
 		<details>
 			<summary>{{planet.name}}</summary>
@@ -49,5 +48,4 @@ layout: null
 			</details>
 		</details>
 {% endfor %}
-	</details>
 </div>
