--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,15 +3,7 @@
 <html lang="en-US">
 	<head>
 		<title>{{page.title}}</title>
-		<meta charset="utf-8">
-		<meta http-equiv="x-ua-compatible" content="IE=edge, chrome=1">
-		<meta name="theme-color" content="#ffffff">
-		<meta name="description" content="{{page.description}}">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
-		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
-		<link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
-		<link rel="icon" type="image/svg+xml" href="img/animatedIcon.svg"><!--svg icon in Firefox, ignored in other browsers-->
+		{%include commonHeadElements.html%}
 		<link rel="alternate" type="application/rss+xml" title="Moonwards News" href="/feed/rss.xml">
 		<link rel="stylesheet" href="{{page.stylesheet}}">
 		<link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,300i,400,400i,600" rel="stylesheet">
