--- a/docs/css/learn.nest.sass.css
+++ b/docs/css/learn.nest.sass.css
@@ -1,7 +1,8 @@
+@charset "UTF-8";
 html {
   margin: 0;
   color: #f7f7dc;
-  font: 1rem/1.6rem 'Titillium Web', sans-serif;
+  font: 1rem/1.6rem "Titillium Web", sans-serif;
   background: #000 url(http://www.moonwards.com/img/tycho-mod.png) no-repeat fixed right 250px;
   padding: 0;
   background-size: 1600px; }
@@ -9,7 +10,7 @@ html {
     html {
       background-size: 100% auto; } }
 
-/*All color, text styling, visual touches, and basic doc styles*/
+/*All color, text styling, visual touches, and basic doc styles */
 body, ul, figure {
   margin: 0; }
 
@@ -187,7 +188,7 @@ nav > ul > li {
   padding: 5px; }
 
 /* Make dropdown menus:
-  ul that is a CHILD of li which is a DESCENDENT of nav */
+ * ul that is a CHILD of li which is a DESCENDENT of nav */
 nav li > ul {
   display: none;
   border-radius: 15px;
@@ -210,7 +211,7 @@ nav li > ul li {
   padding: 5px; }
 
 /* Statement applies only to
-  child ul, only when li is hovered */
+ * child ul, only when li is hovered */
 nav li:hover > ul {
   display: -webkit-box;
   display: -moz-box;
@@ -304,8 +305,6 @@ header {
   margin-left: auto; }
 
 /*Block level elements, and non-text objects */
-/*hoh asks: is this file intentionally commented out?*/
-/* */
 .container {
   width: 94%;
   margin: auto; }
@@ -391,11 +390,6 @@ aside {
   border-radius: 2rem; }
 
 .innerDiv {
-  background-color: rgba(50, 50, 50, 0.7);
-  -moz-border-radius: 1.5rem;
-  -webkit-border-radius: 1.5rem;
-  -ms-border-radius: 1.5rem;
-  border-radius: 1.5rem;
   display: -webkit-box;
   display: -moz-box;
   display: box;
@@ -506,19 +500,6 @@ aside {
   flex: auto;
   border: 1px solid #50500f; }
   .pix img {
-    width: 100%;
-    height: auto; }
-
-.pixCenter {
-  -webkit-box-flex: 0;
-  -moz-box-flex: 0;
-  box-flex: 0;
-  -webkit-flex: 0 1 400px;
-  -moz-flex: 0 1 400px;
-  -ms-flex: 0 1 400px;
-  flex: 0 1 400px;
-  border: 1px solid #50500f; }
-  .pixCenter img {
     width: 100%;
     height: auto; }
 
@@ -742,7 +723,6 @@ div .gallery {
     opacity: 0; }
   100% {
     opacity: 1; } }
-
 .tooltipster-update-fade {
   animation: tooltipster-fading 200ms; }
 
@@ -753,7 +733,6 @@ div .gallery {
     transform: rotate(2deg); }
   100% {
     transform: rotate(0); } }
-
 .tooltipster-update-rotate {
   animation: tooltipster-rotating 600ms; }
 
@@ -762,7 +741,6 @@ div .gallery {
     transform: scale(1.1); }
   100% {
     transform: scale(1); } }
-
 .tooltipster-update-scale {
   animation: tooltipster-scaling 600ms; }
 
@@ -888,14 +866,14 @@ details.details_shim_open > summary {
 
 details.details_shim_closed > summary:before {
   display: inline-block;
-  content: "\25b6";
+  content: "▶";
   padding: 0 0.1em;
   margin-right: 0.4em;
   font-size: 0.9em; }
 
 details.details_shim_open > summary:before {
   display: inline-block;
-  content: "\25bc";
+  content: "▼";
   padding: 0;
   margin-right: 0.35em; }
 
@@ -922,6 +900,9 @@ th {
 
 tr:nth-child(2n) {
   background: rgba(50, 50, 0, 0.7); }
+
+tr:nth-child(odd) {
+  background: rgba(50, 50, 50, 0.7); }
 
 .frameContainer {
   display: -webkit-box;
@@ -1000,19 +981,15 @@ tr:nth-child(2n) {
 @media (min-height: 1000px) {
   .goodHeight {
     height: 950px; } }
-
 @media (min-height: 900px) {
   .goodHeight {
     height: 850px; } }
-
 @media (min-height: 800px) {
   .goodHeight {
     height: 750px; } }
-
 @media (min-height: 700px) {
   .goodHeight {
     height: 650px; } }
-
 @media (min-height: 600px) {
   .goodHeight {
     height: 550px; } }
@@ -1028,6 +1005,13 @@ input[type="text"] {
 .formBuffer {
   padding-bottom: 5px;
   margin-bottom: 0; }
+
+.diagram {
+  background-color: #FFFFFF99;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  margin: 2px; }
 
 #applet_container2 {
   width: 500px;
