machines and transport structure
Former-commit-id: da05b19e89ce203b732338d72badff117f8f1a60 [formerly beddb7588ef76d78c7e0346f51e1c6e6144ee8ab]
Former-commit-id: 44fe479d1c656ddc6a79e0f6218a2cacce632d3a

--- a/_includes/machines/machinesPower.html
+++ b/_includes/machines/machinesPower.html
@@ -31,5 +31,5 @@
 					elevator... and not if the body has an atmosphere and
 					someone lives there... there are a few wrinkles.)
 				</p>
-{% include machinesPowerSolarThermal.html %}
-{% include machinesPowerNuclear.html %}
+{% include_relative _includes/machines/machinesPowerSolarThermal.html %}
+{% include_relative _includes/machines/machinesPowerNuclear.html %}
