--- a/_includes/machines/machinesTransport.html
+++ b/_includes/machines/machinesTransport.html
@@ -32,7 +32,7 @@
 		</div>
 	</section>
 </div>
-{% include transportNuclearShuttles.html%}
-{% include transportFutureEngines.html%}
-{% include transportCargoShip.html %}
-{% include transportTethers.html%}
+{% include_relative _includes/transport/transportNuclearShuttles.html %}
+{% include_relative _includes/transport/transportFutureEngines.html %}
+{% include_relative _includes/transport/transportCargoShip.html %}
+{% include_relative _includes/transport/transportTethers.html %}
