migrated feed from jquery to liquid
Former-commit-id: 2cf6e39929c617027eb55d609e06f8ff832d4100

--- a/_includes/asideMain.html
+++ b/_includes/asideMain.html
@@ -1,7 +1,7 @@
 <aside>
 	<div class="sideDiv">
 		<div id="RSS-feed">
-		If you can't see our RSS feed, it's because Javascript is disabled.
+		{% include sigfeed.html %}
  </div>
  		<a href="https://www.moonwards.com/feed/rss.xml">
 			<svg xmlns="http://www.w3.org/2000/svg"
