migrated the modelProxy system to Jekyll. TODO: give them sensible names
Former-commit-id: 80a1d775736c773dba4f65a23015074e54093ebe

--- a/_layouts/modelProxy.html
+++ b/_layouts/modelProxy.html
@@ -21,7 +21,7 @@
 	</head>
 	<body>
 		{%include nav.html%}
-		<a href="/webplayer/webplayer.html?load={{page.modelPath}}" style="padding:5px;">
+		<a href="{{page.modelPath}}" style="padding:5px;">
 			<img src="{{page.linkImagePath}}" class="overlay" alt="Link to 3D model of the Lalande crater">
 		</a>
 	</body>
