rename modelProxy targets in site pages
Former-commit-id: ff8fa72bc0f0631afe8b815758c4e84953e35087 [formerly 1a2b1b1594c3f187705550693ccfb8d73d92e607]
Former-commit-id: 1c7e69677b9026af9bca91efaa7c7dbc4bac1d73

--- a/_includes/PearyColony.html
+++ b/_includes/PearyColony.html
@@ -79,7 +79,7 @@
 <section class="frameContainer" id="PearyModels">
  <div class="framePairTop">
   <div class="framewrap frame16x9">
-						<iframe src="modelProxy21.html" frameborder="0" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
+						<iframe src="PolarHab.html" frameborder="0" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
 						</iframe>
 		</div>
  </div>
