--- a/_includes/colonyModelsLalande.html
+++ b/_includes/colonyModelsLalande.html
@@ -13,7 +13,7 @@
 		</div>
  <div class="framePairTop">
   <div class="framewrap frame16x9">
-						<iframe src="modelProxy10.html" frameborder="0" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
+						<iframe src="Phase1_Overview.html" frameborder="0" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
 						</iframe>
 		</div>
   </div>
@@ -24,7 +24,7 @@
   </div>
  <div class="framePairTop">
   <div class="framewrap frame16x9">
-				<iframe src="modelProxy11.html" frameborder="0" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
+				<iframe src="AtriumCutaway.html" frameborder="0" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
 				</iframe>
   </div>
   <div class="framePairBottom">
@@ -33,7 +33,7 @@
 		</div>
  <div class="framePairTop">
   <div class="framewrap frame16x9">
-						<iframe src="modelProxy12.html" frameborder="0" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
+						<iframe src="AtriumRadBlind.html" frameborder="0" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
 						</iframe>
 		</div>
  </div>
@@ -42,7 +42,7 @@
  </div>
  <div class="framePairTop">
   <div class="framewrap frame16x9">
-						<iframe src="modelProxy13.html" frameborder="0" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
+						<iframe src="GalleryCutaway.html" frameborder="0" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
 						</iframe>
 		</div>
   </div>
@@ -51,7 +51,7 @@
  </div>
  <div class="framePairTop">
   <div class="framewrap frame16x9">
-						<iframe src="modelProxy14.html" frameborder="0" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
+						<iframe src="DomeCity.html" frameborder="0" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
 						</iframe>
 		</div>
  </div>
