--- a/_includes/machines/machinesBuilding.html
+++ b/_includes/machines/machinesBuilding.html
@@ -91,7 +91,7 @@
 	<aside>
 			<div class="sidePairTop">
 			<div class="framewrap frame16x9" >
-				<iframe src="modelProxy15.html" frameborder="0" allowfullscreen
+				<iframe src="NISTcrane.html" frameborder="0" allowfullscreen
 				mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
 				</iframe>
 			</div>
@@ -120,7 +120,7 @@
 	</div>
 <div class="framePairTop" id="BasaltFiberStation">
 	<div class="framewrap frame16x9">
-					<iframe src="modelProxy17.html" frameborder="0" allowfullscreen
+					<iframe src="BasaltFiberProd.html" frameborder="0" allowfullscreen
 					mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
 					</iframe>
 	</div>
@@ -130,7 +130,7 @@
 </div>
 <div class="framePairTop" id="MIPstation">
 	<div class="framewrap frame16x9">
-					<iframe src="modelProxy18.html" frameborder="0" allowfullscreen
+					<iframe src="MIPstation.html" frameborder="0" allowfullscreen
 					mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
 					</iframe>
 	</div>
@@ -140,7 +140,7 @@
 </div>
 <div class="framePairTop" id="HangarsOverview">
 	<div class="framewrap frame16x9">
-					<iframe src="modelProxy20.html" frameborder="0" allowfullscreen
+					<iframe src="HangarsCutaway.html" frameborder="0" allowfullscreen
 					mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
 					</iframe>
 	</div>
