--- a/_includes/machines/machinesMining.html
+++ b/_includes/machines/machinesMining.html
@@ -441,7 +441,7 @@
 <section class="frameContainer">
  <div class="framePairTop">
 		<div class="framewrap frame16x9">
-						<iframe src="modelProxy19.html" frameborder="0" allowfullscreen
+						<iframe src="DustRoaster.html" frameborder="0" allowfullscreen
 						mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
 						</iframe>
 	 </div>
