--- a/_includes/machines/machinesPowerSolarThermal.html
+++ b/_includes/machines/machinesPowerSolarThermal.html
@@ -69,7 +69,7 @@
 <section class="frameContainer">
  <div class="framePairTop">
 		<div class="framewrap frame16x9">
-						<iframe src="modelProxy22.html" frameborder="0" allowfullscreen
+						<iframe src="TESS.html" frameborder="0" allowfullscreen
 						mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
 						</iframe>
 		</div>
