--- a/_includes/machines/machinesRobots.html
+++ b/_includes/machines/machinesRobots.html
@@ -119,7 +119,7 @@
 	<div class="sidePairTop">
 		<div class="framewrap frame16x9">
 				<iframe
-				src="modelProxy16.html"	frameborder="0"
+				src="ATHLETErover.html"	frameborder="0"
 				allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true"
 				onmousewheel=""></iframe>
 		</div>
