fix iframe img width and naming
Former-commit-id: 40db32ca8112b2ddc95ed94ff6dc649c8f2afdfb

--- a/_includes/machines/machinesBuilding.html
+++ b/_includes/machines/machinesBuilding.html
@@ -140,7 +140,7 @@
 </div>
 <div class="framePairTop" id="HangarsOverview">
 	<div class="framewrap frame16x9">
-					<iframe src="HangarsCutaway.html" frameborder="0" allowfullscreen
+					<iframe src="HangarCutaway.html" frameborder="0" allowfullscreen
 					mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
 					</iframe>
 	</div>
