--- a/sass/_iframes.sass
+++ b/sass/_iframes.sass
@@ -47,13 +47,14 @@
   padding-bottom: 75%
 
 .goodHeight
-  @media (min-height: 1000px)
-    height: 950px
-  @media (min-height: 900px)
-    height: 850px
-  @media (min-height: 800px)
-    height: 750px
-  @media (min-height: 700px)
-    height: 650px
-  @media (min-height: 600px)
-    height: 550px
+
+  @media only screen and (min-height: 600px)
+    height: 500px
+  @media only screen and (min-height: 700px)
+    height: 600px
+  @media only screen and (min-height: 800px)
+    height: 700px
+  @media only screen and (min-height: 900px)
+    height: 800px
+  @media only screen and (min-height: 1000px)
+    height: 900px
